Added css of 1.html

--- a/1.html
+++ b/1.html
@@ -171,7 +171,17 @@
     
   </div>
 <div>
-  <img src="skyscraper-backdrop-downtown-modern-footpath-landscape.jpg"height=1000px width="100%">
+
+</div>
+<div class="sub-footer" >
+    <div class="img"><img src="filters_quality(100) 3.jpg" alt=""></div>
+    <div class="cont"><h1>Try it for free today</h1>
+        <p>Join over 320,000+ marketers, designers, researchers, and product leaders who use Lyssna to make data-driven decisions.</p>
+        <button>Sign up for free</button>
+        <a href="">No credit card required</a>
+    </div>
+    <div class="img"><img src="filters_quality(100) (2).jpg" alt=""></div>
+</div>
 </div>
 <div class="foot">
   <div class="footer" style="margin-top: 35px; height: 90px; width: 100vw; display: flex; flex-direction: column;">
