--- a/1.html
+++ b/1.html
@@ -171,7 +171,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" onclick="refer2()" id="chg3"><br>
+            <a class="nav-link" href="#" onclick="gotoaboutus()"" id="chg3"><br>
               <H4 style="color: white;  margin-right: 10px;"> About Us</H4>
             </a>
           </li>
