--- a/1.html
+++ b/1.html
@@ -78,7 +78,7 @@
     #chg3 {
       color: rgb(250, 250, 250);
       margin: 20px;
-      font-family: 'Comic Neue', cursive;
+      font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
       text-align: center;
     }
 
@@ -87,10 +87,8 @@
     }
     #im
     {
-      background-image: url('');
-      background-color:beige;
-      
-    }
+      background-image: url('Screenshot 2023-12-04 033007.png');
+      }
     
   </style>
 </head>
@@ -98,7 +96,7 @@
 <body>
   <div id="im">
   
-  <nav class="navbar navbar-expand-lg" id="nav1">
+  <!-- <nav class="navbar navbar-expand-lg" id="nav1">
     <div class="container-fluid">
       <img src="town treasure-logos_white.png" style="height:150px; width:200px; top:5px" id="chg3s"
         style="background-color:rgb(128, 75, 0)">
@@ -145,8 +143,59 @@
         </form>
       </div>
     </div>
-  </nav>
+  </nav> -->
+
   
+  <nav class="navbar navbar-expand-lg" id="nav1" style="background-color: black;">
+
+    <div class="container-fluid" style="background-color: black;">
+
+      <img src="town treasure-logos_white.png" style="height:80px; width:200px; top:5px" id="chg3s"
+        style="background-color:rgb(0, 0, 0)">
+
+      <a class="navbar-brand" href="#" onclick="refer1()" id="chg3">
+        <h4 style="color: white; margin-top: 20px;">History & Heritage</h4>
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#"></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="chg3">
+              <br>
+              <H5 style="color: white; margin-right: 10px;"> Explore the City</H5>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="chg3"><br>
+              <H4 style="color: white;  margin-right: 10px;"> About Us</H4>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="chg3"><br>
+              <H4 style="color: white; margin-right: 10px;"> Contact Us</H4>
+            </a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#" id="chg3"><br>
+              <H4 style="color: white; margin-right: 10px;"> Login </H4>
+            </a>
+          </li>
+
+        </ul>
+        <form class="d-flex" role="search" id="bt">
+
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-outline-primary" type="submit">Search</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 
   <br>
   <div class="container mt-5" id="s">
