done some changes in 1.js

--- a/1.html
+++ b/1.html
@@ -166,7 +166,7 @@
             <a class="nav-link active" aria-current="page" href="#"></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#" id="chg3">
+            <a class="nav-link" href="#" onclick="gotoexplore()" id="chg3">
               <br>
               <H5 style="color: white; margin-right: 10px;"> Explore the City</H5>
             </a>
