added onclick event on sign in button

--- a/1.html
+++ b/1.html
@@ -240,7 +240,7 @@
     <div class="cont"><h1>Try it for free today</h1>
         <p id="pp">
           Exploring is a conversation with the planet, a kaleidoscope of cultures and landscapes that broaden your understanding of the human story. It's the shared laughter with nomads under a star-dusted Kenyan sky, the thrill of haggling for silk scarves in a bustling Hanoi market, the quiet awe of watching the sunrise paint the Grand Canyon gold.</p>
-          <button>sign in</button>
+          <button  onclick="refer4()">sign in</button>
     </div>
     <div class="img"><img src="quote2.jpg" alt=""height="600px"></div>
 </div>
