changed css of 1.html

--- a/1.html
+++ b/1.html
@@ -35,9 +35,10 @@
     }
 
     #s {
-      height: 800px;
+      
       padding: 100px;
-      margin-bottom: 120;
+      margin-top: 50;
+      overflow-y: hidden;
       
     }
 
@@ -235,7 +236,7 @@
         <img src="https://imgs.search.brave.com/v9Btwvkd1NvSJpRzC89UOJQhMSyDxiRPJsnlx6GH6CE/rs:fit:500:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAxLzUxLzIxLzk3/LzM2MF9GXzE1MTIx/OTc0MV9VS1UzUlpm/b3R0RDltdmExN1Ft/Y2U5WEJJOG5SVnlC/cC5qcGc" style="height:200px; width: 250px;" alt="">
     </div>
   </marquee>
-<div class="sub-footer" >
+<div class="sub-footer" style="width:100%" >
     <div class="img"><img src="quote1.png" alt="" height="600px"></div>
     <div class="cont"><h1>Try it for free today</h1>
         <p id="pp">
